--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
         /* Fixed Header and Navigation */
         header {
-            background-color: #004080;
+            background-color: blue;
             color: white;
             padding: 20px;
             display: flex;
